@@ -6,8 +6,10 @@ use Compress::Zlib qw(uncompress);
 use Data::Stream::Bulk;
 use Data::Stream::Bulk::Array;
 use Data::Stream::Bulk::Path::Class;
+use DateTime;
 use Digest::SHA1;
 use File::Find::Rule;
+use Git::PurePerl::Actor;
 use Git::PurePerl::DirectoryEntry;
 use Git::PurePerl::Loose;
 use Git::PurePerl::Object;
